src/test/ui/parser/mismatched-braces/missing-close-brace-in-impl-trait.stderr
error: this file contains an un-closed delimiter
  --> $DIR/missing-close-brace-in-impl-trait.rs:13:53
   |
LL | impl T for () {
   |               - un-closed delimiter
...
LL |
   |                                                     ^

error: expected one of `async`, `const`, `crate`, `default`, `extern`, `fn`, `pub`, `type`, `unsafe`, or `}`, found `trait`
  --> $DIR/missing-close-brace-in-impl-trait.rs:6:1
   |
LL | impl T for () {
   |               - unclosed delimiter
...
LL | fn foo(&self) {}
   |                 -
   |                 |
   |                 expected one of 10 possible tokens here
   |                 help: `}` may belong here
LL | 
LL | trait T {
   | ^^^^^ unexpected token

error[E0405]: cannot find trait `T` in this scope
  --> $DIR/missing-close-brace-in-impl-trait.rs:1:6
   |
LL | impl T for () {
   |      ^ not found in this scope

error[E0601]: `main` function not found in crate `missing_close_brace_in_impl_trait`
  --> $DIR/missing-close-brace-in-impl-trait.rs:1:1
   |
LL | / impl T for () {
LL | |
LL | |
LL | | fn foo(&self) {}
...  |
LL | | fn main() {}
LL | |
   | |____________________________________________________^ consider adding a `main` function to `$DIR/missing-close-brace-in-impl-trait.rs`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0405, E0601.
For more information about an error, try `rustc --explain E0405`.
